--- a/css/_base.scss
+++ b/css/_base.scss
@@ -7,7 +7,8 @@ $color_nav_mobi: rgba(7, 63, 122, 0.7);
 $color_cape_cod: #424141;
 $color_link: #0890F2;
 $white: #fff;
-$color_light_grey: #f7f7f7;
+$color_bg: #fafafa;
+$color_light_grey: #eef1f0;
 $black: #000000;
 $color_nobel: #8a8888;
 $color_text: #585858;
@@ -88,7 +89,7 @@ html {
   body {
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background: $color_light_grey;
+	background: $color_bg;
 	margin: 0;
 	padding: 0;
 	color: $white;
@@ -102,7 +103,6 @@ section {
 }
 .container {
 	display:flex;
-	padding: 6rem 0;
 	justify-content: space-around;
 	img {
 		width:100%;
@@ -123,12 +123,7 @@ figure {
 	}
 	}
 
-	.fas {
-		color: $white;
-		font-size: 1.8rem;
-        padding: 0 0 0 .225em;
-        @include ease;
-	}
+	.live-site {font-size:1.225rem;}
 
 //Global page Elements
 .top {
