--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -154,9 +154,10 @@
                 flex-direction: column;
             }
             aside {
-                padding:0;
                 max-width:100%;
                 margin-bottom:2rem;
+                text-align: center;
+                padding:0;
             }
             .title {
                 width:auto;
@@ -235,6 +236,12 @@
 
             .social-media {
                 display: none;
+            }
+        }
+
+        #style {
+            aside {
+                padding:0 2rem;
             }
         }
    
