--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -15,7 +15,7 @@
 		background-color:#fff;
 		padding:3.2rem 3.2rem 2rem;
 		border-radius:4px;
-		box-shadow: 0 0 8px #e2e1e1;
+		box-shadow: 0 0 8px $color_light_grey;;
 		p {
 			font-weight: 600;
 			padding: .8rem 0 0;
@@ -30,7 +30,7 @@
 }
 section {
 	aside {
-		padding:0 2rem 0 0;
+		padding:0 2rem 0;
 		max-width:50%;
 	}
 	.title {
@@ -159,7 +159,7 @@ img.logo {
 			height: auto;
 			width: 100%;
 			margin:0;
-			box-shadow: #d4d4d4 0 0 32px;
+			box-shadow: $color_light_grey 0 0 32px;
 			&:hover {
 				opacity:100%;
 				@include ease;
@@ -174,7 +174,7 @@ img.logo {
 		background-color:#fff;
 		padding:0;
 		border-radius:4px;
-		box-shadow: 0 0 16px #e2e1e1;
+		box-shadow: 0 0 16px $color_light_grey;
 		margin:0 0 8rem;
 		div {
 			padding:3.2rem;
@@ -188,9 +188,10 @@ img.logo {
 // Portfolio	
 
 #case-study {
-	background:#eff0f0;
+	background:$color_light_grey;
 	padding:0;
 	margin: 1rem 0;
+	max-height:400px;
 	&.hero {
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -211,17 +212,27 @@ img.logo {
 		background-image:url("/images/bg/myc-hero.jpg");
 	}
 	&.esd {
-		background-image:url(/images/bg/esd-hero-bg.jpg);
+		background-image:url("/images/bg/esd-hero-bg.jpg");
 	}
 	&.lhm {
 		background-image:linear-gradient(0deg, rgba(44, 44, 44, 0.3), rgba(10, 0, 0, 0.7)),
 		url(/images/bg/lhm-hero-bg.jpg),
 		;
 	}
+	&.nda {
+		background-color: #1D65C7;
+		img {
+			box-shadow: none;
+        height:450px;
+		width:auto;
+		}
+	}
 }
 
+
+
 #critical-issues {
-	background:#eff0f0;
+	background:$color_light_grey;
 	padding:0;
 	margin: 1rem 0;
 }
@@ -234,7 +245,7 @@ img.logo {
 }
 
 #artwork {
-	background:#EFF0F0;
+	background:$color_light_grey;;
 	padding:0;
 	article {
 		display:flex;
