--- a/css/_type.scss
+++ b/css/_type.scss
@@ -23,7 +23,7 @@ h4 {
 }
 p {
 	font-weight: 400;
-	@extend %extend_2;
+	@extend %extend_1;
 	padding:0 0 1.5rem;
 	line-height: 1.5rem;
 	font-size: 1rem;
@@ -39,7 +39,7 @@ strong {
 	@extend %extend_2;
 	font-weight: 600;
 	padding:0;
-	font-size:2rem;
+	font-size:1rem;
 }
 
 small {
@@ -49,15 +49,16 @@ small {
 
 ul {
     padding: 0;
-    margin: 0 0 1rem;
+    margin: 0 0 1rem 2rem;
 li {
-	@extend %extend_1;
-	padding:0;
-	line-height:2rem;
+	@extend %extend_2;
+	padding:0 0 1rem;
+	line-height:1.5rem;
 	.fas{
 		color: $color_small;
 		font-size:1rem;
 		padding-right:.5rem;
+		margin-left:-2rem;
 	}
 }
 }
