--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -139,6 +139,7 @@
         } 
         #case-study {
             padding:0 2rem;
+            max-height: 100%;
         }
         section {
             padding:1.225em;
