--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -317,11 +317,18 @@
                     flex-direction: column;
                     justify-content: center;
                     padding:0 0 1.4rem;
+                    a {
+                        padding:1rem 0;
+                    }
                     .social-media {
                         padding:0 0 1.5rem;
                         display: flex;
                         justify-content: space-around;
                         width: 100%;
+                       i {
+                           font-size:2.5rem;
+                       }
+
                     }
                     .logo {
                         margin:0;
