--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -60,7 +60,7 @@ img.logo {
 /* Biography intro */
 
 .bio {
-	padding:0 1.5rem;
+	padding:0 0 0 2rem;
 }
 
 .btn {
@@ -87,7 +87,7 @@ img.logo {
 		img {
 			justify-self: end;
 			width:auto;
-			height:100%;
+			max-height:500px;
 		}
 	}
 
