--- a/css/_type.scss
+++ b/css/_type.scss
@@ -51,7 +51,7 @@ small {
 
 ul {
     padding: 0;
-    margin: 0 0 1rem 2rem;
+    margin: 0 0 0 2rem;
 li {
 	@extend %extend_2;
 	padding:0 0 1rem;
