--- a/css/global.css
+++ b/css/global.css
@@ -177,7 +177,7 @@ small {
 
 ul {
   padding: 0;
-  margin: 0 0 1rem 2rem;
+  margin: 0 0 0 2rem;
 }
 
 ul li {
@@ -481,10 +481,6 @@ img.logo {
   background: #eef1f0;
   padding: 0;
   margin: 1rem 0;
-}
-
-#project h3 {
-  padding: 2.4rem 0;
 }
 
 #artwork, #wires {
@@ -794,13 +790,13 @@ footer .logoBrand .logo {
     padding: 1.225em;
     height: auto;
     margin: 2rem 0;
-    padding: 0 2rem;
+    padding: 0 0;
   }
   section h1 {
     font-size: 2rem;
   }
   section article {
-    padding: 0;
+    padding: 2rem;
     max-width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -809,8 +805,6 @@ footer .logoBrand .logo {
   }
   section aside {
     max-width: 100%;
-    margin-bottom: 2rem;
-    text-align: center;
     padding: 0;
   }
   section .title {
@@ -895,7 +889,11 @@ footer .logoBrand .logo {
     display: none;
   }
   #style aside {
-    padding: 0 2rem;
+    padding: 0 2rem 2rem;
+    max-width: 100%;
+  }
+  #mobile aside {
+    padding: 0 2rem 2rem;
   }
   article {
     max-width: 100%;
