--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -103,9 +103,10 @@
             height:100vh;
             z-index: 2;
             padding-top: 15vh;
+            position: absolute;
             a {
             padding: 16px 0 0;
-            font-size:18px;
+            font-size:20px;
             display: block;
             font-weight:500;
             }
@@ -158,7 +159,7 @@
                 font-size:2rem;
             }
             article {
-                padding:2rem;
+                padding:0 2rem;
                 max-width: 100%;
                 flex-direction: column;
             }
@@ -207,7 +208,6 @@
 
         .grid {
             grid-template-columns: repeat(1, 1fr);
-            padding:2rem;
 
         }
 
@@ -225,9 +225,6 @@
                 grid-template-columns: repeat(1, 100%);
                 grid-template-rows: repeat(4, 1fr);	
                 grid-row-gap: 2rem;
-            aside {
-                margin:0 0 3rem;
-            }
             aside:nth-child(3) {
                 grid-row: 4;
             }
@@ -251,6 +248,9 @@
             aside {
                 padding:0 2rem 2rem;
                 max-width:100%;
+                img {
+                    width:auto;
+                }
             }
         }
 
