--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -11,7 +11,6 @@
 section {
 	aside {
 		padding:0 2rem 0;
-		max-width:50%;
 	}
 	.title {
 		text-align: center;
@@ -83,6 +82,8 @@ img.logo {
 		grid-template-rows: auto;
 		grid-row-gap: 2rem;
 		grid-column-gap: 2rem;
+		padding:0 2rem;
+
 		.container {
 			position:relative;
 			display: block;
@@ -211,7 +212,7 @@ img.logo {
 
 #critical-issues {
 	background:$color_light_grey;
-	padding:0;
+	padding:2rem 0;
 	margin: 1rem 0;
 }
 
@@ -242,8 +243,3 @@ img.logo {
 	}
 }
 
-#style {
-	aside {
-		max-width:25%;
-	}
-}
