--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -155,6 +155,7 @@
                 width:auto;
                 margin:0;
                 padding:0 2rem;
+                text-align: left;
             }
             
         }
@@ -222,7 +223,6 @@
                 background-position: 30px 50px;
                 background-size: 100px;
                 margin:0;
-                padding:0;
             }.flex {
                 flex-direction: column;
             }
